fixed adminList issues